# docs/api-spec.yml
@@ -39,6 +39,56 @@ components:
           type: array
           items:
             type: string
+    MovieAdminResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        tmdbId:
+          type: integer
+        titulo:
+          type: string
+        sinopsis:
+          type: string
+        duracionMin:
+          type: integer
+        estado:
+          type: string
+        restriccionEdad:
+          type: object
+          properties:
+            codigo:
+              type: string
+            descripcion:
+              type: string
+        fechaEstreno:
+          type: string
+          format: date
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+        posterPath:
+          type: string
+        backdropPath:
+          type: string
+        director:
+          type: string
+        actores:
+          type: array
+          items:
+            type: string
+        generos:
+          type: array
+          items:
+            type: string
+        trailers:
+          type: array
+          items:
+            type: string
     MovieDetailResponse:
       type: object
       properties:
@@ -213,6 +263,12 @@ paths:
       responses:
         '200':
           description: Catálogo local sin filtros forzados
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MovieAdminResponse'
 
   /movies/{id}:
     get:
